Terminando el repaso

--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,14 @@ alt='Es tu culpa'>
       <section>
 	<h2>Vuestra opinión cuenta</h2>
             <a class="twitter-timeline"  href="https://twitter.com/hashtag/jjenui" data-widget-id="749205357122162688">Tweets sobre #jjenui</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+            <script>!function(d,s,id){var
+              js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+	    <aside class='notes'>Y es esencial que se adapten los
+	    medios a la situación. Como los pedagogos que hacen
+	    presentaciones aburridísimas, no sería de recibo que yo
+	    hiciera esta presentación pidiendo cambio y discusión y no
+	      los usara yo mismo.</aside>
       </section>
 
 
@@ -256,6 +263,9 @@ alt='Es tu culpa'>
 	<section><h2>Errores en la metodología</h2>
 	  <h1 class='fragment'>+</h1>
 	  <h2 class='fragment'>Errores en el contenido</h2>
+
+	  <aside class='notes'>Para alcanzar esos objetivos, hay dos
+	    tipos de errores. Veámoslos por partes.</aside>
 	</section>
 
       </section>
@@ -272,7 +282,7 @@ alt='Es tu culpa'>
 	    "Vamos a buscar la mejor herramienta (que se usa o no en las
 	    empresas) para este tema determinado". Y ese momento se congeló,
 	    en el tiempo. A veces, esa herramienta también está
-      obsoleta. El problema, además, es qeu esa herramienta varía de
+      obsoleta. El problema, además, es que esa herramienta varía de
       una asignatura a otra y sin ningún criterio, con lo que esas
       10000 horas que se necesitan para ser excelente en ella se
       acaban yendo al carajo. </aside>
@@ -298,24 +308,49 @@ alt='Es tu culpa'>
 
 	<section
 	  data-background='https://farm4.staticflickr.com/3067/2679219873_a19a7bc892_b_d.jpg'
-	  alt='dormidos'><h1 class='bkg'>Abuso de la clase magistral</h1>
+	  alt='dormidos'><h1 class='bkg'>Abuso de la clase
+	    magistral</h1>
+
+	  <aside class='notes'>Posiblemente no sea algo que abunde
+	  aquí entre la audiencia. Pero seguro que conocéis algún
+	  caso. ¿Conocéis algún caso? Pues eso.
 	</section>
 
 	<section data-background='https://farm4.staticflickr.com/3120/5863480546_d7b9cdfe9b_b_d.jpg' puente roto>
 	  <h1>Separación artificial entre teoría y práctica</h1>
-	  <aside class='notes'>Informática es una ingeniería, y como tal es más importante poner en práctica los conceptos que memorizarlos. Se trata de que, basándote en ellos, seas capaz de construir sistemas hechos principalmente con código. Para que un cocepto se aprenda, es esencial ponerlo en práctica de forma inmediata. Se aprende haciendo.</aside>
+	  <aside class='notes'>Informática es una ingeniería, y como
+	  tal es más importante poner en práctica los conceptos que
+	  memorizarlos. Se trata de que, basándote en ellos, seas
+	  capaz de construir sistemas hechos principalmente con
+	  código. Para que un cocepto se aprenda, es esencial ponerlo
+	  en práctica de forma inmediata. Se aprende haciendo.</aside> 
 	</section>
 
 	<section
 	   data-background='https://farm6.staticflickr.com/5014/5451586074_65603a2ce7_b_d.jpg' alt='diagrama de barras'>
-	  <h1>Falta de analítica</h1>
-	  <aside class='notes'>En cualquier producto de ingeniería hay que optimizar la calidad del proceso y tratar de evitar los fallos en el mismo. Medir las razones por las que se aprueba y se suspende, se asimilan otros contenidos y otros no, se asiste a clase y/o se copia en el examen, es esencial, como lo es saber las actitudes y aptitudes iniciales</aside>
+	  <h1>Falta análisis</h1>
+	  <aside class='notes'>En cualquier producto de ingeniería hay
+	  que optimizar la calidad del proceso y tratar de evitar los
+	  fallos en el mismo. Medir las razones por las que se aprueba
+	  y se suspende, se asimilan otros contenidos y otros no, se
+	  asiste a clase y/o se copia en el examen, es esencial, como
+	  lo es saber las actitudes y aptitudes iniciales</aside>
 	  
 	</section>
 
 	<section data-background='https://farm5.staticflickr.com/4019/4333977144_310566dba4_b_d.jpg' alt='cuchara de palo'>
 	  <h1>El correo electrónico como herramienta de trabajo en grupo</h1>
-	  <aside class='notes'>Para mi, el infierno se debe parecer bastante a la organización de los TFGs. Cada tribunal tiene su forma de enviar la documentación, su formato, y todo por correo elecrónico. Las fechas tienes que buscarlas en un email, compartir información con el tribunal igual... ¿No estamos en el siglo XXI? ¿Seguimos usando una herramienta de los 80? ¿Usarías tus pantalones y chaquetas con hombreras de los 80? Pues eso. Vale, esto no tiene tanto que ver con la enseñanza. Pero es un infierno igual y es el mismo método que se usa para coordinarse los profesores de una asignatura a veces.</aside>
+	  <aside class='notes'>Para mi, el infierno se debe parecer
+	  bastante a la organización de los TFGs. Cada tribunal tiene
+	  su forma de enviar la documentación, su formato, y todo por
+	  correo elecrónico. Las fechas tienes que buscarlas en un
+	  email, compartir información con el tribunal igual... ¿No
+	  estamos en el siglo XXI? ¿Seguimos usando una herramienta de
+	  los 80? ¿Usarías tus pantalones y chaquetas con hombreras de
+	  los 80? Pues eso. Vale, esto no tiene tanto que ver con la
+	  enseñanza de la informática, sino con la gestión de la misma. Pero es un infierno igual y es el mismo método
+	  que se usa para coordinarse los profesores de una asignatura
+	  a veces.</aside> 
 	</section>
 
       </section>
@@ -331,12 +366,18 @@ alt='Es tu culpa'>
 	    después de 20 años de acabar la carrera" o "no sé quién que
 	trabaja en una empresa en Mondoñedo dijo que los sistemas
 	    digitales de segundo le resultaron muy útiles". Que,
-	    curiosamente, convive con "Esto no lo tenemos por qué usar
+	    curiosamente, convive con "Esto no lo tenemos por qué
+	    usarlo sólo
 	    porque lo requieran las empresas". Las empresas son las
 	    que van a contratar a los ingenieros. Habrá que hacerles
 	    algún caso. La mochila dice <a
 	    href='http://dora.wikia.com/wiki/Backpack'>Anything you
-	    might need, I've got inside for you</a>. Lo que hace falta es que el alumno sea Dora, explorando siempre nuevas posibilidades y formas de hacer las cosas, porque es algo que también se aprende a hacer bien o mal. No que el grado le proporcione la mochila de Dora, llena con un montón de cosas que no va a necesitar. </aside>
+	    might need, I've got inside for you</a>. Lo que hace falta
+	    es que el alumno sea Dora, explorando siempre nuevas
+	    posibilidades y formas de hacer las cosas, porque es algo
+	    que también se aprende a hacer bien o mal. No que el grado
+	    le proporcione la mochila de Dora, llena con un montón de
+	    cosas que no va a necesitar. </aside> 
 	</section>
 
 	<section
@@ -347,13 +388,14 @@ alt='Es tu culpa'>
 	  <aside class='notes'>Esto es consecuencia de lo
 	    anterior. Como se explica <em>todo</em>, vamos del nivel
 	    más alto hasta el más bajo. He de confesar que no son informático,
-	    sino físico teórico. Y como tal, no me hablaron de relatividad
+	    sino físico teórico. Y como tal, no me hablaron de
+	    cuántica hasta 3º, relatividad
 	    hasta 4º o 5º y de teoría cuántica de campos hasta 5º. Dependiendo
 	    de lo que vayas a hacer con tu vida y tu empleo, puedes ser un
 	    físico perfectamente válido sin necesidad de entender los
 	    diagramas de Feynman (que de hecho, yo por la presente todavía no entiendo). De la misma forma, puedes ser un
 	    excelente ingeniero del software sin tener ni idea de
-	    programación ni de escribir un compilador</aside>
+	    programación en ensamblador ni de escribir un compilador</aside>
 	</section>
 
 
@@ -363,8 +405,9 @@ alt='Es tu culpa'>
 	  <h2 class='fragment bkg'>Solapamiento de objetivos y
 	  contenidos</h2>
 
-	  <aside class='notes'>También poca integración entre
-	asignaturas. No hay trabajos que se sigan de una a la otra, no
+	  <aside class='notes'>Esto es consecuencia de los silos de
+	antes: poca integración entre
+	asignaturas. No hay trabajos que se sigan de una a otra, no
 	    se traspasan los muros de los departamentos. Además, las
 	    asignaturas son totalmente impermeables, vistas desde
 	    fuera. Los apuntes, imposibles de conseguir si no estás
@@ -392,7 +435,9 @@ alt='Es tu culpa'>
 	    que, por cierto, está ya en GitHub y todo el mundo se
 	    puede bajar. Creo que deberíamos dejar a la gente elegir
 	    si quieren ser zapatos, drones o cantantes de country. Lo
-	    importante, siempre, son las competencias. </aside>
+	    importante, siempre, son las competencias. No se puede
+	    poner más énfasis en nuestras capacidades para evaluar
+	    competencias que en las competencias en sí. </aside>
 
 	</section>
 
@@ -418,7 +463,11 @@ alt='Es tu culpa'>
 	  <h1>Énfasis en la sintaxis</h1>
 	  <h2 class='bkg fragment'>Nada de código ajeno</h2>
 
-	  <aside class='notes'>Programar es crear programas, no escribir sentencias sintácticamente correctas. Lo más importante d eun lenguaje es el ecosistema, no la sintaxis. Y el mejor código es el que no se tiene que escribir.</aside>
+	  <aside class='notes'>Programar es crear programas, no
+	  escribir sentencias sintácticamente correctas. Lo más
+	  importante d eun lenguaje es el ecosistema, no la
+	  sintaxis. Y el mejor código es el que no se tiene que
+	  escribir.</aside> 
 	</section>
 
 	<section>
@@ -432,9 +481,13 @@ alt='Es tu culpa'>
 	<h1 class='bkg'>No se vayan todavía</h1>
 	<aside class='notes'>No todo van a ser problemas. También
 	soluciones. Algunas que ya habréis llevado a cabo
-	muchos. Otras que quizás no. Otras que podréis llevar a cabo
+	muchos. Otras quizás no. Otras que podréis llevar a cabo
 	con compañeros, en vuestro departamento, en comisiones de
-	  calidad, en comisiones de diseño de nuevas titulaciones</aside>
+	  calidad, en comisiones de diseño de nuevas titulaciones. Y
+	otras para las que tendréis que tomar un Kalashnikov y
+	secuestrar a vuestros compañeros para que las hagan. Pero
+	predicando con el ejemplo acabaréis consiguiéndolo, y habrá
+	que empezar por ahí. </aside>
       </section>
 
       <section id='contenidos_slide'>
@@ -454,13 +507,15 @@ alt='Es tu culpa'>
 	aprender algo, se reducen a unos pocos miles en la carrera. Y
 	de esos pocos miles, aún menos se dedican a programar. La
 	informática es la creación de sistemas basados en código. Todo
-	    lo demás, sobra</aside>
+	    lo demás, sobra.</aside>
 	</section>
 
 	<section data-background=''>
 	  <h1>Enseñar ayudando</h1>
 
-	  <aside class='notes'>El papel del profesor tiene que cambiar
+	  <aside class='notes'>.El profesor tiene que darse cuenta de
+	    que no es la persona que sabe más de lo que está
+	    explicando. Ni tiene por qué serlo. El papel del profesor tiene que cambiar
 	    de impartidor de conocimientos a canalizador de
 	    aprendizaje. Y eso incluye una enseñanza multicanal, donde
 	    la clase presencial sea sólo una parte, y esa parte no se
@@ -470,18 +525,29 @@ alt='Es tu culpa'>
 
 	<section data-background=''>
 	  <h1>Cambiar adaptándote</h1>
+
+	  <aside class='notes'>Una asignatura que no cambia de
+	  contenido cada año es una asignatura obsoleta. Y una
+	  asignatura que no cambia de metodología cada tres o cuatro
+	  también lo es. Hay que adaptarse a nuevos paradigmas, a
+	    nuevos conocimientos de los alumnos, a nuevas aptitudes. </aside>
 	</section>
 
 	<section data-background=''>
 	  <h1>Evaluar aprendiendo</h1>
+
+	  <aside class='notes'>Quizás no tendríamos que evaluar a los
+	  alumnos por lo que ellos han aprendido, sino por lo que
+	    ellos te han enseñado. </aside>
 	</section>
 
       </section>
 
+      <!-- Concluyendo -->
       <section>
 	<section>
 	  <iframe src="//giphy.com/embed/bEDvILU8by4bC?html5=true"
-	width="480" height="359" frameBorder="0" class="giphy-embed"
+	width="640" height="400" frameBorder="0" class="giphy-embed"
 	allowFullScreen></iframe><p><a
 	href="http://giphy.com/gifs/1980s-total-eclipse-of-the-heart-bonnie-tyler-bEDvILU8by4bC">via
 	GIPHY</a></p>
