Cambiando la imagen de breaking bad

--- a/public/index.html
+++ b/public/index.html
@@ -553,8 +553,7 @@ alt='Es tu culpa'>
 	GIPHY</a></p>
 	</section>
 
-	<section data-background='https://upload.wikimedia.org/wikipedia/commons/8/8b/Breaking_Bad_season_five_part_i_and_ii_dvd.png'>
-	  <p class='bkg'><a title="By Гришин Никита (Own work) [CC BY-SA 4.0 (http://creativecommons.org/licenses/by-sa/4.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ABreaking_Bad_season_five_part_i_and_ii_dvd.png"><img width="256" alt="Breaking Bad season five part i and ii dvd" src="https://upload.wikimedia.org/wikipedia/commons/8/8b/Breaking_Bad_season_five_part_i_and_ii_dvd.png"/></a></p>
+	<section data-background='https://pixabay.com/static/uploads/photo/2015/06/10/01/10/breaking-bad-804284_960_720.jpg'>
 	</section>
 
 	<section data-background='https://farm7.staticflickr.com/6114/6340984211_036ed98a98_o_d.jpg' alt='Me gusta'>
@@ -567,6 +566,8 @@ alt='Es tu culpa'>
       <section>
 	<h2>Créditos</h2>
 	<ul class='credits'>
+	  <li><a href='https://pixabay.com/en/breaking-bad-graffiti-art-804284/'>Breaking
+	      Bad de Dennis Buntrock</a></li>
 	  <li><a href='https://www.flickr.com/photos/chmoss/8397485048/'>Cara tapada de Clive Moss</a></li>
 	  
 	  <li><a href='https://www.flickr.com/photos/mezzle/6080736879/'>Stallman de Martin Meredith</a></li>
